--- a/PianoTime_GIT/app/src/main/res/layout/activity_main2.xml
+++ b/PianoTime_GIT/app/src/main/res/layout/activity_main2.xml
@@ -5,52 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#5DD5BD"
-    android:clipToPadding="false"
     android:orientation="horizontal"
     android:weightSum="7"
+    android:clipToPadding="false"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
 
-
-    <ImageView
-        android:layout_width="135dp"
-        android:layout_height="108dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="275dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/sater"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/musBarView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="MissingConstraints" />
-
     <com.nitishp.sheetmusic.MusicBarView
         android:id="@+id/musBarView"
-        android:layout_width="556dp"
-        android:layout_height="91dp"
-        android:layout_marginStart="136dp"
-        android:layout_marginLeft="136dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="294dp"
-        android:layout_marginRight="294dp"
-        android:layout_marginBottom="268dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="507dp"
+        android:layout_height="119dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="MissingClass,MissingConstraints">
+        tools:ignore="MissingClass,MissingConstraints" />
 
-    </com.nitishp.sheetmusic.MusicBarView>
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="115dp"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="@+id/musBarView"
+        app:layout_constraintEnd_toStartOf="@+id/musBarView"
+        app:layout_constraintTop_toTopOf="@id/musBarView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonG"
@@ -61,8 +44,8 @@
         android:stateListAnimator="@null"
         android:text="G"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttonA"
         app:layout_constraintStart_toEndOf="@id/buttonF"
+        app:layout_constraintEnd_toStartOf="@id/buttonA"
         tools:ignore="MissingConstraints" />
 
     <Button
@@ -74,8 +57,8 @@
         android:stateListAnimator="@null"
         android:text="D"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttonE"
-        app:layout_constraintStart_toEndOf="@id/buttonC" />
+        app:layout_constraintStart_toEndOf="@id/buttonC"
+        app:layout_constraintEnd_toStartOf="@id/buttonE"/>
 
     <Button
         android:id="@+id/buttonF"
@@ -86,8 +69,8 @@
         android:stateListAnimator="@null"
         android:text="F"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttonG"
-        app:layout_constraintStart_toEndOf="@id/buttonE" />
+        app:layout_constraintStart_toEndOf="@id/buttonE"
+        app:layout_constraintEnd_toStartOf="@id/buttonG"/>
 
     <Button
         android:id="@+id/buttonC"
@@ -98,21 +81,21 @@
         android:stateListAnimator="@null"
         android:text="C"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/buttonD"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_chainStyle="packed"/>
 
     <Button
         android:id="@+id/buttonE"
         android:layout_width="70dp"
         android:layout_height="120dp"
         android:layout_marginBottom="4dp"
-        android:background="@android:color/white"
         android:stateListAnimator="@null"
+        android:background="@android:color/white"
         android:text="E"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttonF"
-        app:layout_constraintStart_toEndOf="@id/buttonD" />
+        app:layout_constraintStart_toEndOf="@id/buttonD"
+        app:layout_constraintEnd_toStartOf="@id/buttonF"/>
 
     <Button
         android:id="@+id/buttonA"
@@ -123,8 +106,8 @@
         android:stateListAnimator="@null"
         android:text="A"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttonB"
-        app:layout_constraintStart_toEndOf="@id/buttonG" />
+        app:layout_constraintStart_toEndOf="@id/buttonG"
+        app:layout_constraintEnd_toStartOf="@id/buttonB"/>
 
     <Button
         android:id="@+id/buttonCC2"
@@ -136,7 +119,7 @@
         android:text="C2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonB" />
+        app:layout_constraintStart_toEndOf="@+id/buttonB"/>
 
     <Button
         android:id="@+id/buttonB"
